# insight_healthcare

./: .gitignore  Insight_Healthcare_Business_Pitch.pptx  Insight_Healthcare_Chatbot_Overview.pptx  README.md  build_business_deck.py  build_presentation.py
ai-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-service/alembic/: env.py
ai-service/alembic/versions/: 001_init.py  002_seed_static.py  003_generate_slots.py
ai-service/app/: main.py
ai-service/app/agents/: appointment.py  insurance.py  knowledge.py  tools.py  triage.py
ai-service/app/core/: config.py  db.py  logging.py
ai-service/app/models/: __init__.py  appointment.py  chat.py  clinic.py  faq.py  insurance.py  provider.py
ai-service/app/repositories/: appointment_repo.py  chat_repo.py  clinic_repo.py  faq_repo.py  insurance_repo.py  slot_repo.py
ai-service/app/schemas/: chat.py
ai-service/app/services/: chat_service.py  embedding_service.py  session_memory.py
ai-service/scripts/: embed_faqs.py  seed_clinic.py  seed_data.py
ai-service/tests/: test_health.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/components/: ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx
frontend/lib/: chatClient.ts  sessionKey.ts  types.ts
k8s/: ai-service.deployment.yaml  ai-service.service.yaml  configmap.yaml  frontend.deployment.yaml  frontend.service.yaml  ingress.yaml  namespace.yaml  secrets.example.yaml
