[project]
name = "insight-healthcare-ai-service"
version = "0.1.0"
description = "FastAPI AI service for the Insight Healthcare multi-agent chatbot."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
